@@ -12,35 +12,20 @@ import org.springframework.stereotype.Component;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
-/**
- * Tool: read_code_components
- *
- * Allows the LLM agent to retrieve the full source code of any component
- * from the repository, including ones not in the initial coreComponentIds list.
- * This is the primary mechanism for the agent to "explore" indirect dependencies.
- *
- * Context flow
- * ────────────────────────────────────────────────────────────────────────────
- * ChatClient.toolContext(Map.of("executionContext", ctx))
- *   → Spring AI populates ToolContext
- *     → tool method receives ToolContext as last parameter
- *       → extracts ModuleExecutionContext
- *         → looks up Node in components map (O(1))
- *         → falls back to reading file from disk if needed
- */
 @Component
 public class ReadCodeComponentsTools {
 
     private static final Logger log = LoggerFactory.getLogger(ReadCodeComponentsTools.class);
 
-    @Tool("""
-            Read the full source code of a code component by its ID.
-            Use this to explore dependencies that were not included in the initial context.
-            Component ID format: "relative/path/to/file.ext::SymbolName"
-            Returns the file content as a string.
-            """)
+    @Tool(
+            "Read the full source code of a code component by its ID. "
+                    + "Use this to explore dependencies that were not included in the initial context. "
+                    + "Component ID format: \"relative/path/to/file.ext::SymbolName\". "
+                    + "Returns the file content as a string."
+    )
     public String readCodeComponents(
             @ToolParam(description = "Component ID, e.g. src/auth/handler.py::AuthHandler")
             String componentId,
@@ -54,11 +39,9 @@ public class ReadCodeComponentsTools {
             return node.getContent();
         }
 
-        // Fall back: try to read the file whose path is embedded in the component ID
-        // format "relative/path/file.ext::Symbol" → read file from repo root
         int sep = componentId.indexOf("::");
-        String relPath = sep >= 0 ? componentId.substring(0, sep) : componentId;
-        java.nio.file.Path filePath = Paths.get(ctx.getAbsoluteRepoPath(), relPath);
+        String relativePath = sep >= 0 ? componentId.substring(0, sep) : componentId;
+        Path filePath = resolveRepoFile(ctx, relativePath);
 
         if (Files.exists(filePath)) {
             try {
@@ -76,12 +59,21 @@ public class ReadCodeComponentsTools {
     }
 
     static ModuleExecutionContext extractContext(ToolContext toolContext) {
-        Object raw = toolContext.getContext().get("executionContext");
+        Object raw = toolContext.getContext().get(GenerateSubModuleDocTools.CTX_KEY);
         if (!(raw instanceof ModuleExecutionContext)) {
             throw new IllegalStateException(
-                "ToolContext is missing 'executionContext' key. " +
-                "Ensure ChatClient.toolContext(Map.of(\"executionContext\", ctx)) is called.");
+                    "ToolContext is missing 'executionContext'. "
+                            + "Ensure ChatClient.toolContext(Collections.singletonMap(\"executionContext\", ctx)) is called.");
         }
         return (ModuleExecutionContext) raw;
+    }
+
+    private Path resolveRepoFile(ModuleExecutionContext context, String relativePath) {
+        Path repoRoot = Paths.get(context.getAbsoluteRepoPath()).toAbsolutePath().normalize();
+        Path target = repoRoot.resolve(relativePath).normalize();
+        if (!target.startsWith(repoRoot)) {
+            throw new SecurityException("Path escapes repository root: " + relativePath);
+        }
+        return target;
     }
 }
